# agent.cpp

./: .gitignore  README.md
.antigravitycli/: 9d962c5b-9b20-4f34-83ae-c29177664aad.json
.github/workflows/: ci.yml
.kiro/specs/cpp-coding-agent/: .config.kiro  design.md  requirements.md  tasks.md
pie-coding-agent/: CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
pie-coding-agent/cmake/: ApplePinClang.cmake  Coverage.cmake  FetchRapidcheck.cmake  UbuntuGcc.cmake
pie-coding-agent/docs/: cli.md
pie-coding-agent/include/pie/: pie.hpp  version.hpp
pie-coding-agent/include/pie/agent/: agent.hpp  agent_session.hpp  agent_session_runtime.hpp  events.hpp
pie-coding-agent/include/pie/auth/: auth_storage.hpp  oauth.hpp  providers.hpp
pie-coding-agent/include/pie/cli/: cli_invocation.hpp  keybindings.hpp  slash_commands.hpp
pie-coding-agent/include/pie/compaction/: compactor.hpp
pie-coding-agent/include/pie/core/: json.hpp  logger.hpp  result.hpp  utils.hpp
pie-coding-agent/include/pie/extension_host/: extension_host.hpp
pie-coding-agent/include/pie/io/: file_lock.hpp  fs_watcher.hpp  http_client.hpp  image_pipeline.hpp  subprocess.hpp
pie-coding-agent/include/pie/models/: model_registry.hpp
pie-coding-agent/include/pie/modes/: modes.hpp
pie-coding-agent/include/pie/providers/: provider.hpp
pie-coding-agent/include/pie/queue/: message_queue.hpp
pie-coding-agent/include/pie/resources/: prompt_loader.hpp  resource_loader.hpp  skill_loader.hpp  theme_manager.hpp
pie-coding-agent/include/pie/sdk/: exporter.hpp  package_manager.hpp  startup_checks.hpp
pie-coding-agent/include/pie/session/: migration.hpp  session_file.hpp  session_manager.hpp  session_tree.hpp
pie-coding-agent/include/pie/settings/: first_run_import.hpp  settings_manager.hpp
pie-coding-agent/include/pie/tools/: bash_executor.hpp  builtin_tools.hpp  define_tool.hpp  tool_host.hpp
pie-coding-agent/include/pie/tui/: tui_runtime.hpp
pie-coding-agent/include/pie/wire/: diff.hpp  globber.hpp  json_schema.hpp  jsonl.hpp  yaml_frontmatter.hpp
pie-coding-agent/runtime/: extension-runtime.cjs
pie-coding-agent/runtime/export-html/: template.css  template.html  template.js
pie-coding-agent/runtime/theme/: dark.json  light.json
pie-coding-agent/scripts/: generate_fixtures.sh
pie-coding-agent/src/auth/: auth_storage.cpp  oauth.cpp
pie-coding-agent/src/cli/: cli_invocation.cpp  keybindings.cpp  main.cpp  slash_commands.cpp
pie-coding-agent/src/compaction/: compactor.cpp
pie-coding-agent/src/core/: placeholder.cpp
pie-coding-agent/src/extension_host/: extension_host.cpp
pie-coding-agent/src/io/: file_lock.cpp  fs_watcher.cpp  http_client.cpp  image_pipeline.cpp  subprocess.cpp
pie-coding-agent/src/models/: model_registry.cpp
pie-coding-agent/src/modes/export/: export_mode.cpp
pie-coding-agent/src/modes/interactive/: interactive_mode.cpp
pie-coding-agent/src/modes/json/: json_mode.cpp
pie-coding-agent/src/modes/print/: print_mode.cpp
pie-coding-agent/src/modes/rpc/: rpc_mode.cpp
pie-coding-agent/src/providers/: provider.cpp
pie-coding-agent/src/queue/: message_queue.cpp
pie-coding-agent/src/resources/: prompt_loader.cpp  resource_loader.cpp  skill_loader.cpp  theme_manager.cpp
pie-coding-agent/src/sdk/: agent_session.cpp  agent_session_runtime.cpp  exporter.cpp  package_manager.cpp  startup_checks.cpp
pie-coding-agent/src/session/: migration.cpp  session_file.cpp  session_manager.cpp  session_tree.cpp
pie-coding-agent/src/settings/: first_run_import.cpp  settings_manager.cpp
pie-coding-agent/src/tools/: bash_executor.cpp  builtin_tools.cpp  define_tool.cpp  tool_host.cpp
pie-coding-agent/src/tui/: tui_runtime.cpp
pie-coding-agent/src/wire/: diff.cpp  globber.cpp  json_schema.cpp  jsonl.cpp  yaml_frontmatter.cpp
pie-coding-agent/tests/conformance/: test_config_fixtures.cpp  test_output_fixtures.cpp  test_session_fixtures.cpp
pie-coding-agent/tests/fixtures/pi-ts-output/auth/: empty.json
pie-coding-agent/tests/fixtures/pi-ts-output/cli-events/: simple.jsonl
pie-coding-agent/tests/fixtures/pi-ts-output/export-html/: simple.html
pie-coding-agent/tests/fixtures/pi-ts-output/keybindings/: default.json
pie-coding-agent/tests/fixtures/pi-ts-output/models/: registry.json
pie-coding-agent/tests/fixtures/pi-ts-output/rpc-traces/: command_round_trip.jsonl
pie-coding-agent/tests/fixtures/pi-ts-output/sessions/v3/: simple.jsonl  with_tool_use.jsonl
pie-coding-agent/tests/fixtures/pi-ts-output/settings/: global.json
pie-coding-agent/tests/fixtures/pi-ts-output/themes/: dark.json
pie-coding-agent/tests/integration/: test_bash_executor.cpp  test_compactor.cpp  test_json_rpc_modes.cpp  test_package_manager.cpp  test_print_mode.cpp  test_theme_hot_reload.cpp
pie-coding-agent/tests/property/: p01_session_entry_round_trip.cpp  p03_build_session_context.cpp  p05_deep_merge.cpp  p07_message_queue.cpp  p10_bash_truncation.cpp  p12_image_round_trip.cpp  p15_argv_parser.cpp  p19_resource_discovery.cpp  p23_models_filter.cpp  p27_install_method.cpp
pie-coding-agent/tests/unit/: phase2_test.cpp  phase3_test.cpp  phase4_test.cpp  phase5_test.cpp  phase6_test.cpp  test_verbose_banner.cpp
